--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "version": "0.1.0",
   "author": "manhhuy01",
   "dependencies": {
+    "axios": "^0.18.0",
+    "fs": "^0.0.1-security",
     "gatsby": "^2.2.3",
     "gatsby-image": "^2.0.34",
     "gatsby-plugin-manifest": "^2.0.24",
@@ -14,10 +16,16 @@
     "gatsby-source-filesystem": "^2.0.27",
     "gatsby-transformer-sharp": "^2.1.17",
     "gh-pages": "^2.0.1",
+    "lozad": "^1.9.0",
+    "path": "^0.12.7",
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "react-redux": "^6.0.1",
+    "redux": "^4.0.1",
+    "redux-saga": "^1.0.2",
+    "styled-components": "^4.1.3"
   },
   "devDependencies": {
     "prettier": "^1.16.4"
