--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gatsby-source-filesystem": "^2.0.27",
     "gatsby-transformer-sharp": "^2.1.17",
     "gh-pages": "^2.0.1",
+    "lodash.debounce": "^4.0.8",
     "lozad": "^1.9.0",
     "path": "^0.12.7",
     "prop-types": "^15.7.2",
