--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
     "redux-saga": "^1.0.2",
-    "styled-components": "^4.1.3"
+    "styled-components": "^4.1.3",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "prettier": "^1.16.4"
